--- a/src/App.css
+++ b/src/App.css
@@ -767,6 +767,14 @@ input:disabled, textarea:disabled {
     margin-right: 0;
     justify-content: center;
   }
+
+  .timeline-content {
+    text-align: center;
+  }
+
+  .timeline-meta {
+    justify-content: center;
+  }
 }
 
 /* Success Popup */
